--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -49,14 +49,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting the path to the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import pathlib\n",
+    "\n",
+    "data_dir = pathlib.Path(\"kaggle\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating the dataset\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pathlib\n",
+    "#TODO: We should consider trying out different batch sizes\n",
     "\n",
-    "data_dir = pathlib.Path(\"kaggle\")\n"
+    "batch_size = 32\n",
+    "img_height = 32\n",
+    "img_width = 32"
    ]
   }
  ],
@@ -76,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
