Finished for today

--- a/notebooks/images.ipynb
+++ b/notebooks/images.ipynb
@@ -2404,8 +2404,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "name": "python3"
+   "name": "python3",
+   "language": "python",
+   "display_name": "Python 3 (ipykernel)"
   },
   "language_info": {
    "codemirror_mode": {
